--- a/src/styles/component/test1.sass
+++ b/src/styles/component/test1.sass
@@ -3,7 +3,8 @@
     background: black
     background-position: top
     opacity: .3
+    display: flex
 
 
 
-    text-align:         center
+    text-align:center
